--- a/src/avr/rf24-ping/CMakeLists.txt
+++ b/src/avr/rf24-ping/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 2.8.11)
-include(../arduino.cmake)
+
+include(../avr.cmake)
 
 project(rf24-ping)
-
-
 
 
 #add_definitions(-DNDEBUG)
@@ -19,49 +18,18 @@ set(SOURCES
     main.cpp)
 
 
-# PORT=/dev/ttyACM0 make flashx_analogin-arduino && picocom -b115200 --echo  --imap lfcrlf --omap ignlf,crlf  /dev/ttyACM0
-ArduinoTarget(TARGET ${PROJECT_NAME}-arduino BOARD "Arduino Uno" ${SOURCES})
-
-
-if(ARDUINO)
-    if(UNO)
-        AvrTarget(
-            TARGET ${PROJECT_NAME}
-            MCU atmega328p
-            F_CPU 16000000
-            BAUD 115200
-            PRINTFMIN
-            ${SOURCES})
-    else()
-        AvrTarget(
-            TARGET ${PROJECT_NAME}
-            MCU atmega328p
-            F_CPU 16000000
-            BAUD 57600
-            PRINTFMIN
-            ${SOURCES})
-    endif()
-else()
-    AvrTarget(
-        TARGET ${PROJECT_NAME}
-        MCU atmega328p
-        F_CPU 8000000
-        BAUD 38400
-        PRINTFMIN
-        ${SOURCES})
+if(NOT F_CPU)
+    set(F_CPU 8000000) # default for HWRV 1.2
 endif()
+AvrTarget(
+    TARGET ${PROJECT_NAME}
+    MCU atmega328p
+    F_CPU ${F_CPU}
+    BAUD 38400
+    PRINTFMIN
+    ${SOURCES})
 
 
-add_custom_target(
-    flash_nano
-    COMMAND avrdude $$AVRDUDE_OPTIONS -v -P $$PORT -p atmega328p -c arduino -b 57600 -U flash:w:${PROJECT_NAME}.hex:i
-    DEPENDS ${PROJECT_NAME}.hex ${PROJECT_NAME}.eep.hex)
-
-# PORT=/dev/ttyACM0 make flash_uno && picocom -b115200 --echo  --imap lfcrlf --omap ignlf,crlf  /dev/ttyACM0
-add_custom_target(
-    flash_uno
-    COMMAND avrdude $$AVRDUDE_OPTIONS -v -P $$PORT -p atmega328p -c arduino -b 115200 -U flash:w:${PROJECT_NAME}.hex:i
-    DEPENDS ${PROJECT_NAME}.hex ${PROJECT_NAME}.eep.hex)
 
 add_custom_target(
     flash_r1.2
